[tool.poetry]
name = "smart-assess"
version = "0.1.0"
description = ""
authors = ["uyuutosa <sayu819@gmail.com>"]
readme = "README.md"
packages = [{include = "smart_assess"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain-openai = "^0.1.14"
langchain = "^0.2.9"
langchain-community = "^0.2.7"
gradio = "^4.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
